src/objects/wbsendit__Campaign_Monitor_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Campaign_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Campaign ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__Client_Name__c</fullName>
        <description>The Campaign Monitor Client the Campaign relates to.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; wbsendit__Client__r.Id , wbsendit__Client__r.wbsendit__Client_Name__c,&quot;_top&quot; )</formula>
        <inlineHelpText>The Campaign Monitor Client the Campaign relates to.</inlineHelpText>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>wbsendit__Client__c</referenceTo>
        <relationshipLabel>Campaign Monitor Campaigns</relationshipLabel>
        <relationshipName>Campaign_Monitor_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__From_Email__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wbsendit__From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Bounced_Count__c</fullName>
        <label>Last Bounced Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Click_Count__c</fullName>
        <label>Last Click Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Open_Count__c</fullName>
        <label>Last Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Unsubscribe_Count__c</fullName>
        <label>Last Unsubscribe Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Bounced__c</fullName>
        <description>Number of bounced emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of bounced emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Clicks__c</fullName>
        <description>Number of clicks for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of clicks for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Forwards__c</fullName>
        <description>Number of forwarded emails for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of forwarded emails for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Likes__c</fullName>
        <description>Number of likes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of likes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Mentions__c</fullName>
        <description>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of &quot;Mentions&quot; for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Mentions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Opens__c</fullName>
        <description>Number of open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Recipients__c</fullName>
        <description>Number of recipients for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of recipients for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Spam_Complaints__c</fullName>
        <description>Number of Spam Complaints for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of Spam Complaints for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Spam Complaints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unique_Opens__c</fullName>
        <description>Number of unique open emails for the associated Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unique open emails for the associated Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unique Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Num_Unsubscribed__c</fullName>
        <description>Number of unsubscribes for the Campaign Monitor campaign.</description>
        <inlineHelpText>Number of unsubscribes for the Campaign Monitor campaign.</inlineHelpText>
        <label>Num Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Pct_Opened__c</fullName>
        <formula>BLANKVALUE(wbsendit__Num_Unique_Opens__c, 0)  /  BLANKVALUE( wbsendit__Total_Recipients__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of emails that were opened for this campaign.</inlineHelpText>
        <label>% Opened</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>wbsendit__Reply_To__c</fullName>
        <label>Reply To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wbsendit__Salesforce_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Salesforce Campaign (Optional)</description>
        <inlineHelpText>Related Salesforce Campaign (Optional)</inlineHelpText>
        <label>Salesforce Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Monitor Campaigns</relationshipLabel>
        <relationshipName>Campaign_Monitor_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Total_Recipients__c</fullName>
        <label>Total Recipients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Web_Version_Text_URL__c</fullName>
        <label>Web Version Text URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Web_Version_URL__c</fullName>
        <description>Link to the email template that was used for this campaign.</description>
        <inlineHelpText>Link to the email template that was used for this campaign.</inlineHelpText>
        <label>Web Version URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__World_View_Email_Tracking__c</fullName>
        <description>World view of the email campaign tracking.</description>
        <inlineHelpText>World view of the email campaign tracking.</inlineHelpText>
        <label>World View Email Tracking</label>
        <type>Url</type>
    </fields>
    <label>Campaign Monitor Campaign</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>wbsendit__World_View_Email_Tracking__c</columns>
        <columns>wbsendit__Salesforce_Campaign__c</columns>
        <columns>wbsendit__Client__c</columns>
        <columns>wbsendit__Sent_Date__c</columns>
        <columns>wbsendit__Subject__c</columns>
        <columns>wbsendit__Total_Recipients__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Monitor Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>